# astrotools

./: README.md
flexcombinegalaxies/: README  globvars.h  kepler_move.c  manual_move.c  translate.c
gadget/: MASSRETURN_FULL_KROUPA  Makefile~  allvars.c  allvars.h  bubbles.c  chemistry.h  cs_findhotngbs.c  cs_ngbfind.c  cs_update_weights.c  density.c  domain.c  fof.c  forcetree.c  get_Je.c  gravtree.c  gravtree_forcetest.c  healpix.c  indent-volker.sh  init.c  job-amd.sh  job-bluegene.sh  job.sh  kinfb_mhm.c  magnetic.txt  mymalloc.c  ngb.c  parallel_sort.c  peano.c  phasespace.c  pm_nonperiodic.c  pm_periodic.c  proto.h  restart.c  subfind_alternative_collective.c  subfind_findlinkngb.c  subfind_potential.c  (+3 more)
makegalaxy/: Makefile.am  README  build  bulge.c  bulgeset.c  config.h  configure.ac  cooling.c  disk.c  diskset.c  distfunc.c  effmodel.c  force.c  forcetree.c  forcetree.h  gas.c  gasset.c  globvars.c  globvars.h  halo.c  haloset.c  init.c  main.c  misc.c  prototypes.h  read_param.c  save.c  structure.c  toomre.c
makegalaxy/.deps/: bessi0.Po  bessi1.Po  bessj0.Po  bessj1.Po  bessk0.Po  bessk1.Po  bulge.Po  bulgeset.Po  cooling.Po  disk.Po  diskset.Po  distfunc.Po  effmodel.Po  erff.Po  escape.Po  force.Po  forcetree.Po  gammln.Po  gammp.Po  gas.Po  gasdev.Po  gasset.Po  gcf.Po  globvars.Po  gser.Po  halo.Po  haloset.Po  indexx.Po  init.Po  main.Po  misc.Po  nrutil.Po  polint.Po  qromb.Po  ran1.Po  read_param.Po  save.Po  spline.Po  splint.Po  structure.Po  (+3 more)
makegalaxy/nrsrc/: erff.c  nr.h
makegalaxy/parameterfiles/: h90sphere.txt  sample.txt  single.txt
(+1446 files in other folders)
